--- a/kooplexhub/hub/templates/navbarmenu_right.html
+++ b/kooplexhub/hub/templates/navbarmenu_right.html
@@ -3,38 +3,26 @@
   {% include 'bio.html' %}
   {% include 'usertokens.html' %}
 {% endif %}
-
 <ul class="navbar-nav navbar-right">
-  <li class="nav-item">
-    <a class="nav-link" href="/manual/" target="_blank">Documentation </a>
-  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownRight" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+     {% if user.is_authenticated %}
+      {{ user.first_name }} {{ user.last_name }}
+     {% else %}
+      Log in
+     {% endif %}
+    </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdownRight">
+   {% if user.is_authenticated %}
+    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout <span class="oi oi-account-logout"></span></a></li>
+    <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#update-bio">Update bio</a></li>
+    <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#reset-token">Reset token</a></li>
+   {% else %}
+    <li><a class="dropdown-item" href="{% url 'social:begin' 'hydraoidc' %}">Log in <span class="oi oi-account-login"></span></a>
+   {% endif %}
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a></li>
+    <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#about-contacts">Contacts and about</a></li>
+  </ul>
+</li>
 
-  <div class="dropdown">
-    <li class="nav-item">
-      <a class="nav-link" href="#" role="button">
-    {% if user.is_authenticated %}
-      Hello {{ user.first_name }}!
-    {% else %}
-      Help
-    {% endif %}
-      </a>
-    </li>
-    <div class="dropdown-content" aria-labelledby="navbarDropdownProfile">
-    {% if user.is_authenticated %}
-      <a href="{% url 'logout' %}">Logout <span class="oi oi-account-logout"></span></a>
-      <a href="#" data-toggle="modal" data-target="#update-bio">Update bio</a>
-      <a href="#" data-toggle="modal" data-target="#reset-token">Manage secrets</a>
-      <div class="dropdown-divider"></div>
-    {% endif %}
-      <a href="https://github.com/kooplex/kooplex-hub/wiki" target="_blank">Kooplex Hub Wiki</a>
-      <a href="#" data-toggle="modal" data-target="#about-contacts">Contacts and about</a>
-    </div>
-  </div>
-  <li class="nav-item">
-  {% if user.is_authenticated %}
-    <a class="nav-link" href="{% url 'do_logout' %}">Log off <span class="oi oi-account-logout"></span></a>
-  {% else %}
-    <a class="nav-link" href="{% url 'social:begin' 'hydraoidc' %}" style="color: white">Log in <span class="oi oi-account-login"></span></a>
-  {% endif %}
-  </li>
-</ul>
