--- a/kooplexhub/hub/templates/container/list.html
+++ b/kooplexhub/hub/templates/container/list.html
@@ -5,9 +5,11 @@
 {% endblock %}
 
 {% block main_content_center %}
+<div class="row row-cols-1 row-cols-md-3 g-4">
   {% for service in services %}
      {% include 'container/partial.html' %}
   {% endfor %}
+</div>
 {% endblock %}
 
 {% block main_content_right %}
