--- a/kooplexhub/hub/templates/container/new.html
+++ b/kooplexhub/hub/templates/container/new.html
@@ -1,25 +1,23 @@
-<div class="modal fade" id="container-new" tabindex="-1" role="dialog" aria-labelledby="titleNewContainer" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
+<div class="modal fade" id="container-new" data-bs-keyboard="false" tabindex="-1" aria-labelledby="titleNewContainer" aria-hidden="true">
+  <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="titleNewContainer">Name your new service environment</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <form id="container_new" class="form-horizontal" action="{% url 'service:new' %}" method="post">
-      {% csrf_token %}
+      <form id="project_new" class="form-horizontal" action="{% url 'project:new' %}" method="post">
+       {% csrf_token %}
         <div class="modal-body">
           <table>
             {{ f_environment_meta.as_table }}
           </table>
           <input type="hidden" name="user_id" value="{{ user.id }}">
-        </div>     <!-- modal-body -->
+        </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-default" name="button" value="apply"> Create</button>
-          <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Create</button>
         </div>
       </form>
-    </div>       <!-- modal-content -->
-  </div>         <!-- modal-dialog -->
-</div>           <!-- modal -->
+    </div>
+  </div>
+</div>
