--- a/kooplexhub/hub/templates/menuitem_services.html
+++ b/kooplexhub/hub/templates/menuitem_services.html
@@ -1,11 +1,11 @@
-<div class="dropdown">
-  <li class="nav-item {{ active }}">
-    <a href="{% url 'service_external:filesync' %}" class="nav-link">Resources</a>
-  </li>
-  <div class="dropdown-content" aria-labelledby="navbarDropdownContainer">
-    <a href="{% url 'service_external:versioncontrol' %}">Version control</a>
-    <a href="{% url 'service_external:filesync' %}">Synchronization</a>
-    <a href="{% url 'indexpage' %}">Data source</a>
-  </div>
-</div>
-
+<li class="nav-item dropdown {{ active }}">
+  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownService" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Resources
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdownService">
+    <li><a class="dropdown-item" href="{% url 'service_external:versioncontrol' %}">Version control</a></li>
+    <li><a class="dropdown-item" href="{% url 'service_external:filesync' %}">Synchronization</a></li>
+    <li><hr class="dropdown-divider"></li>
+    <li><a class="dropdown-item" href="{% url 'indexpage' %}">Data source</a></li>
+  </ul>
+</li>
