--- a/kooplexhub/hub/templates/project/join.html
+++ b/kooplexhub/hub/templates/project/join.html
@@ -1,7 +1,11 @@
 {% extends "layout.html" %}
 
 {% block header_extra %}
+{% comment %}
+FIXME
+{% endcomment %}
   {% load staticfiles %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap4-toggle.min.css' %}">
   <script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
 {% endblock %}
 
@@ -12,15 +16,15 @@
 {% block main_content_center %}
   {% load render_table from django_tables2 %}
   
-  <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
-    {% csrf_token %}
+<form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
+  {% csrf_token %}
     <p>Select those projects you want to join.</p>
     {% render_table t_joinable %}
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-default" name="button" value="apply"> Join projects</button>
-      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-    </div>
-  </form>
+  <div class="float-end">
+    <button type="submit" class="btn btn-primary" name="button" value="aply">Join projects</button>
+    <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
+  </div>
+</form>
 {% endblock %}
 
 {% block main_content_right %}
