--- a/kooplexhub/hub/templates/project/manage.html
+++ b/kooplexhub/hub/templates/project/manage.html
@@ -6,11 +6,6 @@
 {% endblock %}
 
 {% block main_content_center %}
-{% load staticfiles %}
-<link rel="stylesheet" href="{% static 'fontawesome-free-5.10.2-web/css/all.css' %}">
-<link rel="stylesheet" href="{% static 'css/bootstrap4-toggle.min.css' %}">
-<script src="{% static 'scripts/bootstrap4-toggle.min.js' %}"></script>
-
 <div class="row">
   <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' %}" method="post">
     {% csrf_token %}
@@ -20,10 +15,10 @@
     {% else %}
       <p> You do not have any projects to hide or show.
     {% endif %}
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-default" name="button" value="apply"> Apply settings</button>
-      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-    </div>
+  <div class="float-end">
+    <button type="submit" class="btn btn-primary" name="button" value="aply">Apply settings</button>
+    <button type="submit" class="btn btn-secondary" name="button" value="cancel">Cancel</button>
+  </div>
   </form>
 </div> <!-- container -->
 {% endblock %}
