--- a/kooplexhub/hub/templates/project/partial.html
+++ b/kooplexhub/hub/templates/project/partial.html
@@ -1,75 +1,58 @@
-<div class="card bg-light mb-3">
-  <div id="heading-{{ project.id }}" class="card-header btn btn-outline-secondary collapsed" data-toggle="collapse" data-target="#collapse-{{ project.id }}" aria-expanded="true" aria-controls="collapse-{{ project.id }}">
-    <div class="row no-gutters justify-content-between">
-      <div class="col-8">
-        <div class="row">
-          <div class="col-1 text-left">
-            <i class="fas drpdn"></i>
-	    <span class="badge badge-pill badge-dark">
+<div class="col">
+  <div class="card">
+{% comment %}
+    <img src="..." class="card-img-top" alt="...">
+{% endcomment %}
+    <div class="card-body text-dark bg-light">
+      <h5 class="card-title">
+        <span class="badge rounded-pill bg-secondary">
+          <strong>{{ project.name }}</strong>
             {% if project.scope == project.SCP_PRIVATE %}
-              <i class="oi oi-key" aria-hidden="true" data-toggle="tooltip" title="Private project" data-placement="top"></i>
+              <i class="oi oi-key" aria-hidden="true" data-bs-toggle="tooltip" title="Private project" data-placement="top"></i>
             {% else %}
-              <i class="oi oi-cloud" aria-hidden="true" data-toggle="tooltip" title="Public project" data-placement="top"></i>
+              <i class="oi oi-cloud" aria-hidden="true" data-bs-toggle="tooltip" title="Public project" data-placement="top"></i>
             {% endif %}
             {% if project.creator == user %}
-              <i class="ri-admin-fill" aria-hidden="true" data-toggle="tooltip" title="You created it" data-placement="top"></i>
+              <i class="ri-admin-fill" aria-hidden="true" data-bs-toggle="tooltip" title="You created it" data-placement="top"></i>
             {% else %}
-              <i class="ri-team-fill" aria-hidden="true" data-toggle="tooltip" title="You are collaborator" data-placement="top"></i>
+              <i class="ri-team-fill" aria-hidden="true" data-bs-toggle="tooltip" title="You are collaborator" data-placement="top"></i>
             {% endif %}
-	    </span>
-          </div>
-          <div class="col-2 text-left">
-            <strong>{{ project.name }}</strong>
-          </div>
-          <div class="col-9 text-left">
-            {% if project.description %}
-            <span class="badge badge-pill badge-dark" {% if project.description_is_long %}data-toggle="tooltip" title="{{ project.description }}" data-placement="bottom"{% endif %}>
-              Description: {{ project.short_description }}
-            </span>
-            {% else %}
-            <span class="badge badge-pill badge-warning">
-              Please provide a description to your project
-            </span>
-            {% endif %}
-          </div>
-        </div>
-      </div>
-      <div class="col-2 text-right">
-        {% if project.reports|length > 0 %}
-          <span class="badge badge-pill badge-dark" aria-hidden="true" data-toggle="tooltip" title="Reports" data-placement="top"><i class="oi oi-graph"></i>: {{project.reports|length}}</span>
-        {% endif %}
-        {% if project.userprojectbindings|length > 1 %}
-          <span class="badge badge-pill badge-dark" aria-hidden="true" data-toggle="tooltip" title="Collaborators" data-placement="top"><i class="oi oi-people"></i>: {{project.userprojectbindings|length}}</span>
-        {% endif %}
-        {% if services|length > 0 %}
-          <span class="badge badge-pill badge-dark" aria-hidden="true" data-toggle="tooltip" title="Service environments" data-placement="top"><i class="oi oi-terminal"></i>: {{services|length}}</span>
-        {% endif %}
-      </div>
-    </div>
-  </div>
-
-  <div id="collapse-{{ project.id }}" class="collapse" aria-labelledby="heading-{{ project.id }}" data-parent="#projectList">
-    <div class="card" style="margin: 10px">
-      <div class="card-header">Control: 
-        <div style="float: right;">
+	</span>
+      </h5>
+      <p class="card-text"><strong>Description:</strong> {{ project.description }}</p>
+      <p class="card-text"><strong>Info:</strong>
+       <div class="btn-group" role="group">
+        {% include 'project/reports_button.html' %}
+        {% include 'project/collaborators_button.html' %}
+        {% include 'project/containers_button.html' %}
+       </div>
+      </p>
+      <p class="card-text"><strong>Control:</strong>
           {% if project|is_admin:user %}
-            <a href="{% url 'project:configure' project.id %}" role="button" class="btn btn-secondary myctrl"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can modify collaboration and bind environments." data-placement="top" ></span></a>
+            <a href="{% url 'project:configure' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="Settings of project {{ project.name }}. You can modify collaboration and bind environments." data-placement="top" ></span></a>
           {% else %}
-            <a href="#" role="button" class="btn btn-secondary myctrl disabled"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="You don't have permission to configure project {{ project.name }}." data-placement="top" ></span></a>
+            <a href="#" role="button" class="btn btn-secondary btn-sm disabled"><span class="oi oi-wrench" aria-hidden="true" data-toggle="tooltip" title="You don't have permission to configure project {{ project.name }}." data-placement="top" ></span></a>
           {% endif %}
 	  {% if binding.is_hidden %}
-            <a href="{% url 'project:show' project.id %}" role="button" class="btn btn-secondary myctrl"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can unhide {{ project.name }}." data-placement="top"></span></a>
+            <a href="{% url 'project:show' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can unhide {{ project.name }}." data-placement="top"></span></a>
 	  {% else %}
-            <a href="{% url 'project:hide' project.id %}" role="button" class="btn btn-secondary myctrl"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can hide {{ project.name }} from your list." data-placement="top"></span></a>
+            <a href="{% url 'project:hide' project.id %}" role="button" class="btn btn-secondary btn-sm"><span class="oi oi-eye" aria-hidden="true" data-toggle="tooltip" title="You can hide {{ project.name }} from your list." data-placement="top"></span></a>
 	  {% endif %}
+          <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger btn-sm" onclick="return confirm('Are you sure?');"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
+      </p>
+    </div>
+  </div>
+</div>
+
+{% comment %}
+
 	  {% comment %}
-          <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger myctrl"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
-	  <a href="#" data-toggle="modal" data-target="#confirm-{{ project.id }}" role="button" class="btn btn-danger myctrl"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
+          <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger btn-sm"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
+	  <a href="#" data-toggle="modal" data-target="#confirm-{{ project.id }}" role="button" class="btn btn-danger btn-sm"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
 	  {% with "Do you really want to delete project "{{ project.name }}"?" as message %}
 	  {% include 'confirm.html' with cid=project.id title="Delete project" url_ok="#" %}
 	  {% endwith %}
-	  {% endcomment %}
-          <a href="{% url 'project:delete' project.id %}" role="button" class="btn btn-danger myctrl" onclick="return confirm('Are you sure?');"><span class="oi oi-trash" aria-hidden="true" data-toggle="tooltip" title="Delete project {{ project.name }}." data-placement="top"></span></a>
+	  {  % endcomment %  }
         </div>
       </div>
         <div class="card-deck">
@@ -91,13 +74,6 @@
               <h5 class="card-title">Environments associated</h5>
             {% else %}
               <h5 class="card-title">Environments</h5>
-              {% for svc in services %}
-                  <span data-toggle="tooltip" title="Image: {{ svc.image }}">{{ svc.name }}</span>
-                  <div style="float: right;">
-                    {% include 'container/startopen.html' with service=svc next_page="project:list" %}
-                    {% include 'container/stopremove.html' with service=svc next_page="project:list" %}
-                  </div>
-              {% endfor %}
             {% endif %}
             </div>
           </div>
@@ -115,11 +91,5 @@
               {% for r in project.reports %}
               {% endfor %}
             {% endif %}
-          </div>
-        </div>
-	</div>  <!-- end of lower card deck-->
 
-    </div>
-  </div>
-</div>
-
+{% endcomment %}
