--- a/kooplexhub/hub/templates/project/project_submenu.html
+++ b/kooplexhub/hub/templates/project/project_submenu.html
@@ -8,7 +8,7 @@
      </div>
      <div class="col-8">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item"><a class="nav-link" href="#" data-toggle="modal" data-target="#project-new">New project</a></li>
+          <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#project-new">New project</a></li>
           <li class="nav-item"><a {% if submenu == 'join' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:join' %}" {% endif %}>Join a project</a></li>
           <li class="nav-item"><a {% if submenu == 'list' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:list' %}" {% endif %}>List projects</a></li>
           <li class="nav-item"><a {% if submenu == 'showhide' %} class="nav-link active" href="#" {% else %} class="nav-link" href="{% url 'project:showhide' %}" {% endif %}>Show/hide projects</a></li>
